# SequentialComparison-TVZ

./: .gitignore  Dockerfile  EDA.ipynb  GRU.ipynb  LSTM.ipynb  README.md  Transformer.ipynb  app.py  data_viz.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_utils.py  torch_utils.py  utils.py
models/: gru_m2m_20-09-2025.pth  gru_m2m_22-05-2025.pth  gru_m2o_20-09-2025.pth  gru_m2o_22-05-2025.pth  lstm_m2m_16-05-2025.pth  lstm_m2m_20-09-2025.pth  lstm_m2o_16-05-2025.pth  lstm_m2o_20-09-2025.pth  transformer_m2m_21-07-2025.pth  transformer_m2m_22-05-2025.pth  transformer_m2o_21-07-2025.pth  transformer_m2o_22-05-2025.pth
notebooks/: GRU.ipynb  LSTM.ipynb  ParamSearch.ipynb  TradingSim.ipynb  Transformer.ipynb
scalers/: standard_scaler.save
streamlit/: app.py  requirements.txt  streamlit_utils.py
utils/: finance_utils.py  torch_utils.py
