[project]
name = "sequentialcomparison-tvz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy<2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn==1.6.1",
    "streamlit>=1.48.1",
    "yfinance>=0.2.65",
]
